--- a/tests/unit.suite.yml
+++ b/tests/unit.suite.yml
@@ -7,4 +7,8 @@ modules:
     enabled:
         - Asserts
         - \Helper\Unit
+        - Db:
+              dsn: "mysql:host=%DB_HOST%;dbname=%DB_NAME%"
+              user: "%DB_USER%"
+              password: "%DB_PASSWORD%"
     step_decorators: ~        
